--- a/EcoQuest.csproj
+++ b/EcoQuest.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="spectre.console" Version="0.49.1" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
+    <PackageReference Include="Spectre.Console.ImageSharp" Version="0.49.1" />
   </ItemGroup>
 
 </Project>
